2009-06-07  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Sam Weinig.

        Change the implementation of op_throw so the stub function always modifies its
        return address - if it doesn't find a 'catch' it will switch to a trampoline
        to force a return from JIT execution.  This saves memory, by avoiding the need
        for a unique return for every op_throw.

        * jit/JITOpcodes.cpp:
        (JSC::JIT::emit_op_throw):
            JITStubs::cti_op_throw now always changes its return address,
            remove return code generated after the stub call (this is now
            handled by ctiOpThrowNotCaught).
        * jit/JITStubs.cpp:
        (JSC::):
            Add ctiOpThrowNotCaught definitions.
        (JSC::JITStubs::DEFINE_STUB_FUNCTION):
            Change cti_op_throw to always change its return address.
        * jit/JITStubs.h:
            Add ctiOpThrowNotCaught declaration.

2009-06-05  Gavin Barraclough  <barraclough@apple.com>

        Rudder stamped by Sam Weinig.

        Add missing ASSERT.

        * assembler/X86Assembler.h:
        (JSC::X86Assembler::getRelocatedAddress):

2009-06-05  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Sam Weinig.

        Switch storePtrWithPatch to take the initial immediate value as an argument.

        * assembler/MacroAssemblerX86.h:
        (JSC::MacroAssemblerX86::storePtrWithPatch):
        * assembler/MacroAssemblerX86_64.h:
        (JSC::MacroAssemblerX86_64::storePtrWithPatch):
        * jit/JITOpcodes.cpp:
        (JSC::JIT::emit_op_jsr):

2009-06-05  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Sam Weinig.

        Remove patchLength..tByIdExternalLoadPrefix magic numbers from JIT.h.

        These aren't really suitable values to be tracking within common code
        of the JIT, since they are not (and realistically cannot) be checked
        by ASSERTs, as the other repatch offsets are.  Move this functionality